# terminux

./: .dockerignore  .gitignore  CHANGES.md  Dockerfile  Makefile  README.md  noxfile.py  pyproject.toml  ruff.toml  terminux.spec  zensical.toml
.builds/: alpine.yml  ubuntu-2404.yml
docs/: architecture.md  developing.md  faq.md  getting-started.md  index.md  keyboard-shortcuts.md  packaging.md  shell-integration.md  workspaces-and-tabs.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.ts  cmdpalette.ts  commands-bindings.ts  commands.ts  dragdrop.ts  duration.ts  editing.ts  find.ts  font.ts  fuzzy.ts  keymap.ts  kitty.ts  layout.ts  main.ts  palette.ts  platform.ts  reconcile.ts  rename.ts  reorder.ts  sidebar.ts  statspanel.ts  store.ts  style.css  tabs.ts  terminal.ts  types.ts
frontend/test/: commands.test.ts  editing.test.ts  fuzzy.test.ts  kitty.test.ts  reorder.test.ts  store-reconcile.test.ts
packaging/: launcher.py
src/terminux/: __init__.py  __main__.py  app.py  constants.py  openurl.py
src/terminux/assets/: icon.icns
src/terminux/core/: __init__.py  model.py  persistence.py  pty_backend.py  shellprobe.py  terminal.py
src/terminux/server/: __init__.py  api.py  asgi.py  auth.py  controller.py  middleware.py
src/terminux/web/static/: index.html
src/terminux/web/static/assets/: index-B5WKJBl2.js  index-BFxYh6ga.js  index-BHr3kEWD.css  index-BQm2O2vB.js  index-BVnMi7n0.js  index-B_nXKuhN.js  index-Bc_ilIRX.css  index-BmHE9dKh.js  index-BuNOqhBp.css  index-C3B7zWkd.js  index-CCJnugtG.js  index-CNPX-j0-.js  index-CRQTErsY.css  index-CTy62FMU.js  index-CfllwcKW.css  index-Cg27vtnZ.css  index-Cr0PcD4Y.js  index-D-aUANiw.js  index-D0v_5Oo8.js  index-D9UoDdUz.js  index-DB2X_opm.css  index-DpQOdHkQ.js  index-DtWrCbZn.js  index-Du_1pxsL.js  index-GcZ3MCBz.js  index-z6HVWx0I.js
tests/a_unit/: test_asgi_unit.py  test_auth.py  test_model.py  test_persistence.py  test_pty_backend_unit.py  test_shellprobe.py  test_terminal_unit.py
tests/b_integration/: conftest.py  test_app.py  test_server.py  test_terminal.py
tests/c_e2e/: conftest.py  test_ui.py
