[project]
name = "terminux"
version = "0.7.0"
description = "A cross-platform desktop terminal with workspaces and tabs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pywebview>=5.0",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "ptyprocess>=0.7",
    "platformdirs>=4.0",
    "websockets>=13.0",
]

[project.scripts]
terminux = "terminux.app:main"

[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # Build
    "pyinstaller>=6.0",
    # Tests
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-playwright>=0.8.0",
    "nox>=2026.4.10",
    # Lint / typecheck
    "ruff>=0.15.13",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pyrefly>=1.0.0",
    "ty>=0.0.37",
    # Doc
    "zensical>=0.0.43",
]

[project.urls]
Homepage = "https://github.com/abilian/terminux"
Documentation = "https://github.com/abilian/terminux/blob/main/docs/index.md"
Repository = "https://github.com/abilian/terminux.git"
Issues = "https://github.com/abilian/terminux/issues"
Changelog = "https://github.com/abilian/terminux/blob/main/CHANGES.md"


#
# pytest
#
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast isolated unit tests",
    "integration: component-interaction tests",
    "e2e: end-to-end workflow tests",
]
filterwarnings = [
    # Inherent to spawning a PTY from our multi-threaded process (ptyprocess
    # uses pty.fork, then execs immediately); safe here, not actionable.
    "ignore:This process .* is multi-threaded, use of forkpty.*:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["terminux"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

#
# mypy
#
[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["ptyprocess", "webview", "webview.*", "Foundation", "AppKit"]
ignore_missing_imports = true

#
# pyrefly
#
[tool.pyrefly]
preset = "legacy"
ignore-missing-imports = [
    "ptyprocess",
    "webview",
    "webview.*",
    "Foundation",
    "AppKit",
]
